dhall/tests/type-inference/failure/unit/CompletionWithWrongOverridenType.txt
Type error: error: annot mismatch: { id : Optional Natural, name : Bool } != { id : Optional Natural, name : Text }
 --> <current file>:1:5
  |
...
6 | in  Example::{ name = True }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ annot mismatch: { id : Optional Natural, name : Bool } != { id : Optional Natural, name : Text }
  |
